--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
   <title>Be My Valentine 💘</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       min-height: 100vh;
       display: flex;
@@ -27,14 +21,8 @@
       font-family: "Poppins", sans-serif;
       overflow: hidden;
     }
+    @keyframes bgMove { 0%, 100% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } }
 
-    @keyframes bgMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    /* Card Styling */
     .card, .success-card {
       width: min(92%, 450px);
       padding: 40px 30px 45px;
@@ -47,97 +35,33 @@
       animation: cardIn 1.1s ease;
       z-index: 5;
     }
+    .success-card { display: none; }
+    @keyframes cardIn { from { opacity: 0; transform: translateY(30px) scale(0.95); } to { opacity: 1; transform: translateY(0) scale(1); } }
 
-    .success-card {
-      display: none;
-    }
+    .emoji { font-size: 68px; margin-bottom: 12px; animation: heartbeat 1.8s infinite; }
+    @keyframes heartbeat { 0%,100% { transform: scale(1); } 25% { transform: scale(1.08); } 50% { transform: scale(1); } 75% { transform: scale(1.12); } }
 
-    @keyframes cardIn {
-      from { opacity: 0; transform: translateY(30px) scale(0.95); }
-      to { opacity: 1; transform: translateY(0) scale(1); }
-    }
+    h2, h3 { font-family: "Playfair Display", serif; color: #4a1c2f; margin-bottom: 20px; }
+    .buttons { position: relative; height: 78px; }
+    button { position: absolute; padding: 14px 36px; border-radius: 40px; border: none; font-size: 16px; font-weight: 500; cursor: pointer; transition: all 0.25s ease; }
+    #yes { left: 12%; background: linear-gradient(135deg, #ff4d6d, #ff758f); color: #fff; box-shadow: 0 15px 35px rgba(255,77,109,0.55); z-index: 10; }
+    #no { left: 55%; background: rgba(255,255,255,0.9); color: #777; }
 
-    .emoji {
-      font-size: 68px;
-      margin-bottom: 12px;
-      animation: heartbeat 1.8s infinite;
-    }
-
-    @keyframes heartbeat {
-      0%,100% { transform: scale(1); }
-      25% { transform: scale(1.08); }
-      50% { transform: scale(1); }
-      75% { transform: scale(1.12); }
-    }
-
-    h2, h3 {
-      font-family: "Playfair Display", serif;
-      color: #4a1c2f;
-      margin-bottom: 20px;
-    }
-
-    .buttons {
-      position: relative;
-      height: 78px;
-    }
-
-    button {
-      position: absolute;
-      padding: 14px 36px;
-      border-radius: 40px;
-      border: none;
-      font-size: 16px;
-      font-weight: 500;
-      cursor: pointer;
-      transition: all 0.25s ease;
-    }
-
-    #yes {
-      left: 12%;
-      background: linear-gradient(135deg, #ff4d6d, #ff758f);
-      color: #fff;
-      box-shadow: 0 15px 35px rgba(255,77,109,0.55);
-      z-index: 10;
-    }
-
-    #no {
-      left: 55%;
-      background: rgba(255,255,255,0.9);
-      color: #777;
-    }
-
-    /* YouTube Container */
     .video-container {
       position: relative;
       width: 100%;
-      padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+      padding-bottom: 56.25%;
       border-radius: 15px;
       overflow: hidden;
       margin-top: 20px;
       box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+      /* This line prevents clicking the video to pause/fullscreen */
+      pointer-events: none; 
     }
+    .video-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; }
 
-    .video-container iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0;
-    }
-
-    .heart {
-      position: absolute;
-      bottom: -20px;
-      animation: floatUp linear forwards;
-      pointer-events: none;
-      z-index: 1;
-    }
-
-    @keyframes floatUp {
-      from { transform: translateY(0) scale(1); opacity: 1; }
-      to { transform: translateY(-120vh) scale(1.8); opacity: 0; }
-    }
+    .heart { position: absolute; bottom: -20px; animation: floatUp linear forwards; pointer-events: none; z-index: 1; }
+    @keyframes floatUp { from { transform: translateY(0) scale(1); opacity: 1; } to { transform: translateY(-120vh) scale(1.8); opacity: 0; } }
   </style>
 </head>
 <body>
@@ -145,26 +69,20 @@
   <div class="card" id="mainCard">
     <div class="emoji">🐱❤️</div>
     <h2>Pakkiya,<br>will you be my Valentine?</h2>
-
     <div class="buttons">
       <button id="yes">Yes 💖</button>
       <button id="no">No 🙈</button>
-    </div>
-    <div style="margin-top: 28px; font-size: 13px; color: #6b6b6b; font-style: italic;">
-        Some love stories don’t allow “no” ✨
     </div>
   </div>
 
   <div class="success-card" id="successCard">
     <div class="emoji">🥳✨</div>
     <h3>I love you Pakkiya</h3>
-    <p>I can’t wait to spend Valentine’s Day with you! ❤️</p>
     
-    <div class="video-container" id="videoWrapper">
+    <div class="video-container">
       <iframe id="ytPlayer" 
-        src="https://www.youtube.com/embed/kXrvjveml6A?enablejsapi=1" 
-        allow="autoplay; encrypted-media" 
-        allowfullscreen>
+        src="https://www.youtube.com/embed/kXrvjveml6A?enablejsapi=1&controls=0&modestbranding=1&rel=0&disablekb=1&iv_load_policy=3" 
+        allow="autoplay; encrypted-media">
       </iframe>
     </div>
   </div>
@@ -182,7 +100,6 @@
     const hoverSound = document.getElementById("hoverSound");
     const yesSound = document.getElementById("yesSound");
 
-    // No button logic
     noBtn.addEventListener("mouseenter", () => {
       hoverSound.currentTime = 0;
       hoverSound.play();
@@ -192,25 +109,14 @@
       noBtn.style.top = Math.random() * maxY + "px";
     });
 
-    // Yes button logic
     yesBtn.addEventListener("click", () => {
       yesSound.play();
-      
-      confetti({
-        particleCount: 300,
-        spread: 150,
-        origin: { y: 0.6 }
-      });
-
+      confetti({ particleCount: 300, spread: 150, origin: { y: 0.6 } });
       mainCard.style.display = "none";
       successCard.style.display = "block";
-
-      // Attempt to auto-play the video
-      const videoSrc = ytPlayer.src;
-      ytPlayer.src = videoSrc + "&autoplay=1";
+      ytPlayer.src += "&autoplay=1";
     });
 
-    // Background hearts
     function createHeart() {
       const heart = document.createElement("div");
       heart.className = "heart";
